# thegoonies_psvita

./: README.md
goonies-1.4.1528/: CMakeLists.txt  Makefile.vita
goonies-1.4.1528/graphics/: _ob_skull-entrance2.nfo  gr_tileblue-bridge-r.nfo  gr_tileblue-ground-r.nfo  ob_bat-death.nfo  ob_bat2.nfo  ob_blueguy-jump-l.nfo  ob_bone-crash1.nfo  ob_character-fall2.nfo  ob_character-punch-mask-l.nfo  ob_character-punchjump-mask-r.nfo  ob_character-r3.nfo  ob_coin3.nfo  ob_ghost-death.nfo  ob_greyguy-l3.nfo  ob_greyguy-r1.nfo  ob_greyguy-r2.nfo  ob_greyguy-r3.nfo  ob_rock_greeb.nfo  ob_skeleton-jumping-l.nfo  ob_skeleton-jumping-r.nfo  ob_skeleton-r2.nfo  ob_skull-entrance_03.nfo  ob_whiteguy-jump-r.nfo  ob_whiteguy-l1.nfo  ob_whiteguy-l3.nfo  ob_yellowguy-jump-l.nfo  wl_tilegreen-wall-l1.nfo  wl_tileyellow-ground-wall-r.nfo
goonies-1.4.1528/maps/: fratellies.txt  level0-0-0.gmp  level1-0-2.gmp  level1-0-3.gmp  level1-0-4.gmp  level1-1-1.gmp  level1-1-2.gmp  level1-1-3.gmp  level1-1-4.gmp  level1-2-1.gmp  level1-2-2.gmp  level1-2-3.gmp  level1-3-1.gmp  level1-3-4.gmp  level1-4-1.gmp  level1-4-2.gmp  level1-4-3.gmp  level1-4-4.gmp  level1-5-1.gmp  level1-5-2.gmp  level1-5-3.gmp  level1-5-4.gmp  level2-1-2.gmp  level2-1-3.gmp  level2-1-4.gmp  level2-2-1.gmp  level2-2-3.gmp  level2-2-4.gmp  level2-3-1.gmp  level2-3-2.gmp  level2-3-4.gmp  level2-4-2.gmp  level2-4-3.gmp  level2-4-4.gmp  level2-5-1.gmp  level2-5-2.gmp  level2-5-3.gmp  level2-5-4.gmp  level2-6-1.gmp  level2-6-2.gmp  (+63 more)
goonies-1.4.1528/src/: 2DCMC.cpp  GLTManager.cpp  GLTile.cpp  GMap.cpp  GMapLayer.cpp  GO_bat.cpp  GO_bigrock.cpp  GO_bone.cpp  GO_bridge.cpp  GO_bullet.cpp  GO_cagedoor.cpp  GO_character.cpp  GO_closingwall.cpp  GO_coin.cpp  GO_drop.cpp  GO_dropgenerator.cpp  GO_enemy.cpp  GO_entrydoor.cpp  GO_exitdoor.cpp  GO_fallingrock.cpp  GO_fallingwater.cpp  GO_flame.cpp  GO_fratelli.cpp  GO_ghost.cpp  GO_item.cpp  GO_jumpingskull.cpp  GO_key.cpp  GO_lava.cpp  GO_musicalnote.cpp  GO_pipe_water.cpp  GO_rope.cpp  GO_skeleton.cpp  GO_skull.cpp  GO_skulldoor.cpp  GO_trickyskull.cpp  GO_water.cpp  GO_wateropening.cpp  GO_watersplash.cpp  GObject.cpp  GObjectCreator.cpp  (+40 more)
